# GYM

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile.in  walkman-GYM.dox
examples/: CMakeLists.txt  grabber_example.cpp  module_state_streamer_example.cpp
examples/control_tutorial/: CMakeLists.txt  README.md
examples/control_tutorial/app/: CMakeLists.txt
examples/control_tutorial/app/conf/: control_tutorial_initial_config.ini  robotology_control_tutorial_initial_config.ini
examples/control_tutorial/include/: control_tutorial_constants.h  control_tutorial_module.hpp  control_tutorial_thread.h
examples/control_tutorial/src/: control_tutorial_main.cpp  control_tutorial_thread.cpp
examples/generic_tutorial/: CMakeLists.txt
examples/generic_tutorial/app/: CMakeLists.txt
examples/generic_tutorial/app/conf/: tutorial_configuration.ini
examples/generic_tutorial/include/: tutorial_constants.h  tutorial_control_thread.h  tutorial_module.hpp
examples/generic_tutorial/src/: tutorial_control_thread.cpp  tutorial_main.cpp
include/: yarp_ft_interface.h  yarp_interface.h  yarp_single_chain_interface.h  yarp_status_interface.h
include/GYM/: control_module.hpp  control_thread.hpp  generic_module.hpp  generic_thread.hpp  helper_module.hpp  internal_yarp_command_interface.hpp  yarp_command_interface.hpp  yarp_status_interface.h  yarp_switch_interface.hpp
include/shared/planner_msgs/: cmd_struct.h  flat_walk_cmd.h  flat_walk_plan.h
include/shared/utils/: CMakeLists.txt  OccupancyGrid.h  Pose2D.h
include/shared/yarp_grabbers/: YARP_OccupancyGrid_grabber.h  YARP_Pose2D_grabber.h  YARP_grabber.hpp  YARP_pcl_grabber.h  grabber_hello_world.cpp
include/shared/yarp_msgs/: TickTime.h  YARP_Header.h  YARP_OccupancyGrid_msg.h  YARP_PCLPointField.h  YARP_Point.h  YARP_PointCloud2.h  YARP_Pose.h  YARP_Quaternion.h
scripts/: generate_GYM_control_skeleton.sh  generate_GYM_generic_skeleton.sh  generate_GYM_skeleton.sh
skeleton/: generate_gym_skeleton.sh  skeleton.kdev4
skeleton/.kdev4/: skeleton.kdev4
skeleton/app/: CMakeLists.txt
skeleton/control/: CMakeLists.txt
skeleton/control/app/conf/: initial_config.ini
skeleton/control/include/: constants.h  module.hpp  thread.h
skeleton/control/src/: main.cpp  thread.cpp
skeleton/generic/: CMakeLists.txt
skeleton/generic/include/: module.hpp
skeleton/generic/src/: thread.cpp
skeleton/include/: module.hpp
skeleton/src/: main.cpp
src/: generic.cpp  yarp_interface.cpp  yarp_status_interface.cpp
tests/: CMakeLists.txt  test_interfaces.cpp
